# aliyun-oss-cpp-sdk

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  all.sln  appveyor.yml  test_coverage.sh
oss_sdk_cpp/: CMakeLists.txt  build_config.h  cleancmake.sh  oss_sdk_cpp.sln  oss_sdk_cpp.vcxproj  oss_sdk_cpp.vcxproj.filters
oss_sdk_cpp/base/: base.cc  base.h  defer.h  macros.h  nullable.h  range.h  string_piece.cc  string_piece.h  sys_string_conversions.h  sys_string_conversions_win.cc
oss_sdk_cpp/http/: curl_warppers.cc  curl_warppers.h  http_configuration.cc  http_configuration.h  http_engine.cc  http_engine.h  http_engine_input.cc  http_engine_input.h  http_engine_output.cc  http_engine_output.h  http_headers.cc  http_headers.h
oss_sdk_cpp/message/: append_object_request.cc  append_object_request.h  append_object_result.cc  append_object_result.h  bucket.cc  bucket.h  bucket_cors.cc  bucket_cors.h  complete_multipart_upload_request.cc  complete_multipart_upload_request.h  complete_multipart_upload_result.cc  complete_multipart_upload_result.h  copy_object_request.cc  copy_object_request.h  copy_object_result.cc  copy_object_result.h  delete_multiple_objects_request.cc  delete_multiple_objects_request.h  delete_multiple_objects_result.cc  delete_multiple_objects_result.h  get_bucket_acl_result.cc  get_bucket_acl_result.h  get_bucket_cors_result.cc  get_bucket_cors_result.h  get_bucket_lifecycle_result.cc  get_bucket_lifecycle_result.h  get_bucket_location_result.cc  get_bucket_location_result.h  get_bucket_logging_result.cc  get_bucket_logging_result.h  get_bucket_referer_result.cc  get_bucket_referer_result.h  get_bucket_website_result.cc  get_bucket_website_result.h  get_object_request.cc  get_object_request.h  initiate_multipart_upload_request.cc  initiate_multipart_upload_request.h  initiate_multipart_upload_result.cc  initiate_multipart_upload_result.h  (+50 more)
oss_sdk_cpp/oss/: oss.cc  oss.h  oss_client.cc  oss_client.h  oss_client_configuration.cc  oss_client_configuration.h  oss_error_code.cc  oss_error_code.h  oss_exception.cc  oss_exception.h  oss_status.cc  oss_status.h
oss_sdk_cpp/utils/: apr_utils.cc  apr_utils.h  http_utils.cc  http_utils.h  sign_utils.cc  sign_utils.h  string_utils.cc  string_utils.h  utils.cc  utils.h  xml_utils.cc  xml_utils.h
samples/: CMakeLists.txt  exp_oss_client.cc  exp_oss_client.h  exp_samples.cc  exp_samples.h  normal_samples.cc  normal_samples.h  samples.cc  samples.sln  samples.vcxproj  samples.vcxproj.filters
tutorial/: tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md
unittests/: CMakeLists.txt  unittests.cpp  unittests.sln  unittests.vcxproj  unittests.vcxproj.filters
unittests/base/: nullable_unittest.cc  string_piece_unittest.cc
unittests/http/: curl_warppers_unittest.cc  http_configuration_unittest.cc  http_engine_unittest.cc
unittests/message/: append_object_request_unittest.cc  append_object_result_unittest.cc  bucket_cors_unittest.cc  bucket_unittest.cc  complete_multipart_upload_request_unittest.cc  complete_multipart_upload_result_unittest.cc  copy_object_request_unittest.cc  copy_object_result_unittest.cc  delete_multiple_objects_request_unittest.cc  delete_multiple_objects_result_unittest.cc  get_bucket_acl_result_unittest.cc  get_bucket_cors_result_unittest.cc  get_bucket_lifecycle_result_unittest.cc  get_bucket_location_result_unittest.cc  get_bucket_logging_result_unittest.cc  get_bucket_referer_result_unittest.cc  get_bucket_website_result_unittest.cc  get_object_request_unittest.cc  initiate_multipart_upload_request_unittest.cc  initiate_multipart_upload_result_unittest.cc  lifecycle_rule_unittest.cc  list_buckets_request_unittest.cc  list_buckets_result_unittest.cc  list_multipart_uploads_request_unittest.cc  list_multipart_uploads_result_unittest.cc  list_objects_request_unittest.cc  list_objects_result_unittest.cc  list_parts_request_unittest.cc  list_parts_result_unittest.cc  multipart_upload_unitetest.cc  object_content_unittest.cc  object_metadata_unittest.cc  option_object_request_unittest.cc  option_object_result_unittest.cc  part_etag_unittest.cc  set_bucket_cors_request_unittest.cc  set_bucket_lifecycle_request_unittest.cc  set_bucket_logging_request_unittest.cc  set_bucket_referer_request_unittest.cc  set_bucket_website_request_unittest.cc  (+5 more)
unittests/oss/: oss_client_unittest.cc  oss_exception_unittest.cc  status_unittest.cc
unittests/utils/: apr_utils_unittest.cc  http_utils_unittest.cc  sign_utils_unittest.cc  string_utils_unittest.cc  utils_unittest.cc
